# spamApp

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRACTS.md  Makefile  README.md  agentic-dev-practices.md  app.py  mockup.html  pyproject.toml  requirements.txt
data/boundaries/: gadm_cache.gpkg
data/index/: level_0.parquet  level_1.parquet  level_2.parquet
data/knowledge/chroma_db/: chroma.sqlite3
data/knowledge/scraped/: about.md  data.md  faq.md  methodology.md  publications.md
docs/: tasks.md
docs/design/: hld.md  lld.md
src/: analyzer.py  boundaries.py  cli.py  crops.py  faq.py  formatter.py  index.py  rag.py  raster.py
tests/: conftest.py  test_analyzer.py  test_boundaries.py  test_crops.py  test_index.py  test_raster.py
